# google_pkg

./: .gitignore  README.md  Untitled-1.py  google.code-workspace  pyproject.toml
google_api/: __init__.py  bigquery.py  gcal.py  gchat.py  gmail.md  gmail.py  gsheet.py  gtask.txt
