[project]
name = "google-api"
version = "1.8"
description = "Package to interact with various Google APIs"
authors = [{ name = "Andre", email = "andre.kamarudin@fairprice.com.sg" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "google-api-python-client>=2.0.0,<3.0.0",
    "google-api-core>=2.0.0,<3.0.0",
    "google-cloud-bigquery>=3.0.0,<4.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pandas-gbq>=0.26.1,<1.0.0",
    "requests>=2.31",
    "pydantic>=2.0.0,<3.0.0",
    "tqdm>=4.0.0,<5.0.0",
    "db-dtypes>=1.1,<2",
    "colorama>=0.0.0,<1.0.0",
    "icecream>=2.1.3,<3",
    "python-dotenv>=1.0,<2",
    "gradio>=5.33.1,<6",
    "plotly>=6.1.2,<7",
    "beautifulsoup4>=4.12",
    "google-auth-oauthlib>=1.1",
    "returns>=0.25.0",
    "tabulate>=0.9.0",
    "termcolor>=3.1.0",
    "aklog",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
aklog = { git = "https://github.com/andrekamarudin/aklog" }
